--- a/驾照轻松考/Base.lproj/Main.storyboard
+++ b/驾照轻松考/Base.lproj/Main.storyboard
@@ -1160,8 +1160,8 @@
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="255" id="rX3-qD-yiM"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
